fix: compressed a few bg images, change font file formats from tiff to wof, background scroll on safari

--- a/src/Pages/Main/home.module.css
+++ b/src/Pages/Main/home.module.css
@@ -10,7 +10,6 @@
   @media (min-width: 640px) {
     padding-bottom: 80px;
     /* keep the background image fixed on desktop */
-    background-attachment: fixed;
   }
 }
 
